--- a/DirectX new.vcxproj
+++ b/DirectX new.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="collision\CollisionInfo.cpp" />
     <ClCompile Include="collision\CollisionPrimitive.cpp" />
     <ClCompile Include="collision\CollisionTypes.cpp" />
+    <ClCompile Include="Framework.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TisGame.cpp" />
   </ItemGroup>
@@ -186,6 +187,7 @@
     <ClInclude Include="collision\CollisionInfo.h" />
     <ClInclude Include="collision\CollisionPrimitive.h" />
     <ClInclude Include="collision\CollisionTypes.h" />
+    <ClInclude Include="Framework.h" />
     <ClInclude Include="TisGame.h" />
   </ItemGroup>
   <ItemGroup>
