--- a/DirectX new.vcxproj
+++ b/DirectX new.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="collision\CollisionPrimitive.cpp" />
     <ClCompile Include="collision\CollisionTypes.cpp" />
     <ClCompile Include="Framework.cpp" />
+    <ClCompile Include="GamePlayScene.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TisGame.cpp" />
   </ItemGroup>
@@ -188,6 +189,7 @@
     <ClInclude Include="collision\CollisionPrimitive.h" />
     <ClInclude Include="collision\CollisionTypes.h" />
     <ClInclude Include="Framework.h" />
+    <ClInclude Include="GamePlayScene.h" />
     <ClInclude Include="TisGame.h" />
   </ItemGroup>
   <ItemGroup>
